# rust_sqlite_egui

./: .gitignore  Cargo.toml  Project_RUST_SQLITE.sublime-workspace  db.sqlite
migrations/2023-11-16-204017_dipendenti/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/ui/: app_ui.rs
