[package]
name = "rust_sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"
egui = {  version = "0.23.0"}
egui_extras = "0.23.0"
eframe = "0.23.0"